--- a/SpiralPay/SpiralPay/StoryboardsAndXIBs/HomeAddressTableViewCell.xib
+++ b/SpiralPay/SpiralPay/StoryboardsAndXIBs/HomeAddressTableViewCell.xib
@@ -102,7 +102,7 @@
                                 </constraints>
                                 <inset key="contentEdgeInsets" minX="0.0" minY="-10" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" image="deleteOptionsCross"/>
-                                <state key="highlighted" image="settingEditPencil"/>
+                                <state key="highlighted" image="deleteOptionsCross"/>
                                 <connections>
                                     <action selector="deleteButtonTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="oEI-0a-z54"/>
                                 </connections>
@@ -120,7 +120,7 @@
                                 </constraints>
                                 <inset key="contentEdgeInsets" minX="0.0" minY="-10" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" image="defaultAddressOptionsTick"/>
-                                <state key="highlighted" image="settingEditPencil"/>
+                                <state key="highlighted" image="defaultAddressOptionsTick"/>
                                 <connections>
                                     <action selector="defaultButtonTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="34h-VG-rcL"/>
                                 </connections>
